Rewrite supply module
