# backend/modules/supply/supply.route.js
@@ -8,53 +8,58 @@ const containerHandler = container.resolve('containerHandler');
 const authHandler = container.resolve('authHandler');
 const upload = container.resolve('multerUpload');
 const imageUploader = container.resolve('imageUploader');
+const inject = container.resolve('injection');
 
+router.get('/supply/status',
+  controllerHelper.invoke('getStatus', 'supplyController')
+);
+
+router.get('/supplies/all',
+  controllerHelper.invoke('getAll', 'supplyController')
+);
 router.get('/supplies',
+  inject.getVerified,
   controllerHelper.invoke('getAll', 'supplyController')
 );
 router.get('/supplies/unverified',
-  containerHandler.useRedis,
+  inject.getAllUnverified,
   controllerHelper.invoke('getAll', 'supplyController')
-); // redis
+);
 
 router.get('/supplies/me',
   authHandler.verifyToken,
+  inject.getVerified,
   controllerHelper.invoke('getMine', 'supplyController')
 );
 router.get('/supplies/me/unverified',
   authHandler.verifyToken,
-  containerHandler.useRedis,
+  inject.getMineUnverified,
   controllerHelper.invoke('getMine', 'supplyController')
-); // redis
+);
 
-router.get('/supply/unverified/:id',
-  containerHandler.useRedis,
-  controllerHelper.invoke('getOne', 'supplyController')
-); // redis
 router.get('/supply/:id',
+  containerHandler.getSupplyByEvent,
   controllerHelper.invoke('getOne', 'supplyController')
 );
 
 router.get('/supply/:id/review',
-  containerHandler.useRedis,
   controllerHelper.invoke('getReview', 'supplyController')
-); // redis
+);
 
 router.post('/supply',
   authHandler.verifyToken,
-  containerHandler.useRedis,
   controllerHelper.invoke('create', 'supplyController')
-); // redis
+);
 router.post('/supply/:id',
   authHandler.verifyToken,
+  containerHandler.accept,
   controllerHelper.invoke('accept', 'supplyController')
 );
 
 router.post('/supply/:id/review',
   authHandler.verifyToken,
-  containerHandler.useRedis,
   controllerHelper.invoke('review', 'supplyController')
-); // redis
+);
 
 router.post('/supply/:id/proof',
   authHandler.verifyToken,
@@ -65,14 +70,12 @@ router.post('/supply/:id/proof',
 
 router.put('/supply/:id',
   authHandler.verifyToken,
-  containerHandler.useRedis,
   controllerHelper.invoke('edit', 'supplyController')
-); // redis
+);
 
 router.delete('/supply/:id',
   authHandler.verifyToken,
-  containerHandler.useRedis,
   controllerHelper.invoke('delete', 'supplyController')
-); // redis
+);
 
 export default router;
